fix:followers wasn't visible because covered by followersShade, fixed by z-index

--- a/styles/components/pages/shared/Followers.module.css
+++ b/styles/components/pages/shared/Followers.module.css
@@ -1,5 +1,6 @@
 .container {
   display: none;
+  z-index: 100;
 }
 
 .tabs {
@@ -89,7 +90,7 @@
 
 .followerAbout * {
   margin:0px;
-  padding:0px;
+  padding:0px;  
 }
 
 .fullname {
@@ -97,6 +98,7 @@
   font-weight: normal;
   font-size: 16px;
   letter-spacing: 0.15px;
+  color:#FFFFFF;
 }
 
 .username {
